force-app/main/default/objects/cgc_sync__Sync_Message__c/cgc_sync__Sync_Message__c.object-meta.xml
<CustomObject>
    <description>Messages exposed to a mobile app user during the sync process</description>
    <label>Sync Message</label>
    <nameField>
        <displayFormat>SM-{000000}</displayFormat>
        <label>Sync Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>