force-app/main/default/objects/cgc_sync__Sync_Message__c/fields/cgc_sync__Category__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Category__c</fullName>
    <description>Category of the sync message:
        Core sync message
        Static sync message
        Dynamic sync message</description>
    <label>Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>