force-app/main/default/objects/cgc_sync__Sync_Message__c/fields/cgc_sync__Code__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Code__c</fullName>
    <description>Message code.</description>
    <label>Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>