force-app/main/default/objects/cgc_sync__Sync_Message__c/fields/cgc_sync__IsCore__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__IsCore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Core</label>
    <type>Checkbox</type>
</CustomField>