force-app/main/default/objects/cgc_sync__Sync_Message__c/fields/cgc_sync__MappingType__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__MappingType__c</fullName>
    <label>Mapping Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CategoryBased</fullName>
            </value>
            <value>
                <fullName>CodeBased</fullName>
            </value>
            <value>
                <fullName>ObjectBased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>