force-app/main/default/objects/cgc_sync__Sync_Message__c/fields/cgc_sync__Nr_of_Translations__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Nr_of_Translations__c</fullName>
    <description>Counts the number of available translations.</description>
    <label>Nr of Translations</label>
    <summaryForeignKey>cgc_sync__Sync_Message_Translation__c.cgc_sync__Sync_Message__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>