force-app/main/default/objects/cgc_sync__Sync_Message__c/recordTypes/cgc_sync__SyncMessageExtendible_Configuration.recordType-meta.xml
<RecordType>
    <fullName>cgc_sync__SyncMessageExtendible_Configuration</fullName>
    <active>true</active>
    <label>Sync Message Extendible Configuration</label>
</RecordType>