force-app/main/default/objects/cgc_sync__Sync_Message__c/validationRules/cgc_sync__PreventEditCoreMessageConfiguration.validationRule-meta.xml
<ValidationRule>
    <fullName>cgc_sync__PreventEditCoreMessageConfiguration</fullName>
    <active>true</active>
    <description>Prevent edit of core indices</description>
    <errorConditionFormula>AND (PRIORVALUE(cgc_sync__IsCore__c), OR 
					(ISCHANGED(cgc_sync__IsCore__c),
					 ISCHANGED(cgc_sync__Category__c),
					 ISCHANGED(cgc_sync__Code__c),
					 ISCHANGED(cgc_sync__MappingType__c)))</errorConditionFormula>
    <errorMessage>Core configuration change is not allowed!</errorMessage>
</ValidationRule>