force-app/main/default/objects/cgc_sync__Sync_Message__c/listViews/cgc_sync__All.listView-meta.xml
<ListView>
    <fullName>cgc_sync__All</fullName>
    <columns>NAME</columns>
    <columns>cgc_sync__IsCore__c</columns>
    <columns>cgc_sync__Category__c</columns>
    <columns>cgc_sync__Code__c</columns>
    <columns>cgc_sync__Nr_of_Translations__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>